# jarl

./: Cargo.toml  README.md  config-example.toml  stations.toml  themes.toml
src/: app.rs  config.rs  favorites.rs  history.rs  icy.rs  icy_meta.rs  logger.rs  main.rs  meta_poll.rs  player.rs  playlist.rs  quotes.rs  stations.rs  theme.rs  ui.rs  visualizer.rs
src/modes/: confirm_delete.rs  history.rs  mod.rs  normal.rs  search.rs  theme_picker.rs
